--- a/templates/installer.html
+++ b/templates/installer.html
@@ -2,7 +2,7 @@
 {% include 'header.html' %}
 
 
-{% block title %} Package Installer {% endblock %}
+{% block title %} Bynet Installer {% endblock %}
 
 {% block body %}
 <div class="text-center my-5">
@@ -20,7 +20,7 @@
             <option value="{{ package }}">{{ package }}</option>
             {% endfor %}
         </select>
-        <button class="btn btn-outline-danger mt-3">Submit</button>
+        <button class="btn btn-outline-danger mt-3">Install</button>
     </div>
 </div>
 {% endblock %}
