--- a/templates/header.html
+++ b/templates/header.html
@@ -30,7 +30,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link text-light" href="/details">Contact Us</a>
+          <a class="nav-link text-light" href="/details">Stay In Touch</a>
         </li>
       </ul>
     </div>
