--- a/templates/details.html
+++ b/templates/details.html
@@ -25,7 +25,7 @@
             </tr>
             <tr>
                 <td><label class="font-italic h4">Email</label></td>
-                <td><input type="text" name="total_percentage" 
+                <td><input type="text" name="email" 
                             class="form-control"
                             pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"
                             title="Email should be in valid format."/>
