--- a/templates/test.html
+++ b/templates/test.html
@@ -1,10 +1,3 @@
-{% extends 'base.html' %}
-{% include 'header.html' %}
-
-
-{% block title %} Bynet Installer {% endblock %}
-
-{% block body %}
 <div class="text-center my-5">
     <h3 class="text-black display-3 font-weight-bold font-italic">Welcome to Bynet Installer!</h3>
     <p class="text-black text-center lead font-italic">At Bynet, we make it easy for you to find and install the software packages you need. 
@@ -14,11 +7,11 @@
 </div>
 <form method="POST" class="form-group my-3">
     <p class="text-black font-weight-bold h3 font-italic">Select your package</p>
-    <select name="package-select" class="form-control form-control-sm bg-light" id="exampleForm$
+    <select name="package-select" class="form-control form-control-sm bg-light" id="exampleFormControlSelect1">
         {% for package in packages %}
         <option value="{{ package }}">{{ package }}</option>
         {% endfor %}
     </select>
     <button class="btn btn-outline-danger mt-3" type="submit">Install</button>
 </form>
-{% endblock %}
+
