--- a/templates/404.html
+++ b/templates/404.html
@@ -2,7 +2,7 @@
 {% include 'header.html' %}
 
 
-{% block title %} Bynet Installer {% endblock %}
+{% block title %} Page Not Found {% endblock %}
 
 {% block body %}
 <div class="text-center my-5">
