--- a/templates/success.html
+++ b/templates/success.html
@@ -2,14 +2,23 @@
 {% include 'header.html' %}
 
 
-{% block title %} Bynet Installer {% endblock %}
+{% block title %} Bynet Installer- Success {% endblock %}
 
 {% block body %}
 <div class="text-center my-5">
-    <h3 class="text-black display-3 font-weight-bold font-italic"> Installation script has been downloaded successfully!</h3>
-    <p class="text-black text-center lead font-italic">Great news! Your package {{ package }} installation is almost complete. 
-     To finish it off, please navigate to the ec2-user home directory where you will find the installation script {{ package_file_key }} that was downloaded. 
+    <h3 class="text-black display-3 font-weight-bold font-italic"> Installation script has been downloaded successfully</h3>
+    <p class="text-black text-center lead font-italic">Great news! Your package ({{ package }}) installation is almost complete. 
+     To finish it off, please navigate to the ec2-user home directory where you will find the installation script ({{ package_file_key }}) .
      Simply run the script and follow the prompts, and you'll be up and running in no time.
-     If you have any issues or concerns, don't hesitate to reach out for assistance.  
-    </p>
+     If you have any issues or concerns, don't hesitate to reach out for assistance.</p>
+     <div class="my-5">
+     <p class="text-black text-center lead font-italic font-weight-bold">In order to install, run the following commands:</p>
+        <br>
+	<p class="text-black text-center lead font-italic my-2 font-weight-bold">1) cd /tmp/</p>
+        <br>
+	<p class="text-black text-center lead font-italic my-2 font-weight-bold">2) chmod a+x /tmp/{{ package_file_key }}</p>
+        <br>
+	<p class="text-black text-center lead font-italic my-2 font-weight-bold">3) ./{{ package_file_key }}</p>
+     </div>
+</div>
 {% endblock %}
