--- a/templates/success.html
+++ b/templates/success.html
@@ -8,7 +8,7 @@
 <div class="text-center my-5">
     <h3 class="text-black display-3 font-weight-bold font-italic"> Installation script has been downloaded successfully</h3>
     <p class="text-black text-center lead font-italic">Great news! Your package ({{ package }}) installation is almost complete. 
-     To finish it off, please navigate to the ec2-user home directory where you will find the installation script ({{ package_file_key }}) .
+     To finish it off, please navigate to tmp directory (/tmp) where you will find the installation script ({{ package_file_key }}) .
      Simply run the script and follow the prompts, and you'll be up and running in no time.
      If you have any issues or concerns, don't hesitate to reach out for assistance.</p>
      <div class="my-5">
