--- a/templates/details.html
+++ b/templates/details.html
@@ -12,7 +12,7 @@
                 <td><label class="font-italic h4">Company Name</label></td>
                 <td><input type="text" name="company_name" 
                             class="form-control required"
-                            pattern="[a-zA-Z0-9]*${1,100}"
+                            pattern="^[a-zA-Z0-9]*${1,100}$"
                             title="Company name must contain only alphanumeric charachters."/></td>
             </tr>
             <tr>
