finalize until endpoint ready

--- a/templates/details.html
+++ b/templates/details.html
@@ -33,7 +33,7 @@
                 <td><label class="font-italic h4">Email</label></td>
                 <td><input type="text" name="email" 
                             class="form-control"
-                            pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"
+                            pattern="[a-zA-Z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"
                             title="Email should be in valid format."/>
                             </td>
             </tr>
